[project]
name = "slack-tools"
version = "0.1.1"
description = "A concise, and opinionated, syntax for building Slack Block Kit UIs...and other things."
authors = [{ name = "Zach Holmquist", email = "zach@spacemonkey.net" }]
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
classifiers = []
dependencies = []

# [project.urls]
# Homepage = ""
# Source = ""
# Documentation = ""
# Changelog = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slack_tools"]

[dependency-groups]
dev = [
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "ruff>=0.9.4",
]
lint = ["mypy>=1.11.2", "pytest>=8.3.4", "ruff>=0.9.4"]

# MyPy
[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["./slack_tools"]
incremental = true
packages = ["slack_tools"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
expand_typevar_from_subtype = true

# Ruff
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
include = ["slack_tools/**/*.py", "tests/**/*.py"]
select = [
    "A001",
    "A002",
    "B018",
    "B035",
    "D",
    "E",
    "F",
    "I001",
    "PERF",
    "PLE",
    "PLW",
    "RUF",
    "SLF001",
    "TID251",
    "T20",
    "UP032",
    "W",
    "I",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D401",
    "E402",
    "E721",
    "E722",
    "E731",
    "PERF203",
    "RUF005",
    "RUF009",
    "RUF012",
    "D200",
    "D205",
    "D417",
    "PERF401",
    "PERF402",
    "T201",
]

[tool.ruff.lint]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 15 }


[tool.ruff.lint.isort]
known-first-party = ["slack_tools"]
combine-as-imports = true
force-wrap-aliases = true
order-by-type = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = false
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["D"]
"**/docs/**/*.py" = ["D"]

[tool.pytest.ini_options]
testpaths = ["slack_tools/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
